# fmu_wrapper

./: LICENSE  README.md  appveyor.yml  build_pyfmi.sh  requirements.txt  setup.cfg  setup.py  test_fmus.py
fmu_wrapper/: fmu_wrapper.py
fmu_wrapper/get_params_and_unknowns/: __main__.py
fmu_wrapper/test/: test_fmu_wrapper.py
src/fmu_wrapper/: fmu_wrapper.py
