[metadata]
name = fmu_wrapper
version = 0.1
summary = OpenMDAO Wrapper for Functional Mockup Unit (FMU)
description-file = README.txt
keywords = openmdao, fmu
home-page =
download-url =
author = Adam Nagel
author-email = adam.nagel@gmail.com
maintainer = Adam Nagel
maintainer-email = adam.nagel@gmail.com
license = GNU General Public License, version 2
classifier = Intended Audience :: Science/Research
	Topic :: Scientific/Engineering
requires-dist = openmdao.main
provides-dist =
obsoletes-dist =
requires-python =
	>=2.6
	<3.0
requires-externals =
project-url =

[openmdao]
copyright =
static_path = [ '_static' ]

[wheel]
universal = 1
